width: 230px;   position: fixed;   top: 220px;   left:50%;   margin-left:-580px;   text-align: right;

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -706,12 +706,17 @@ footer {
 @media print, screen and (max-width: 1060px) {
 
   div.wrapper {
-    width:auto;
+    width:100%;
     margin:0;
   }
 
   nav{
-    display: none;
+    width: 230px;
+    position: fixed;
+    top: 220px;
+    left:50%;
+    margin-left:-580px;
+    text-align: right;
   }
 
   header, section, footer {
@@ -2953,7 +2958,7 @@ strong {
 
 }
 
-#content img {
+#section img {
   max-height: auto;
   max-width: 100%;
 
